Fixed logo alignment

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -147,7 +147,8 @@ nav{
 .logo{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
-  text-align: center;
+  text-align: left;
+  padding-left: 5em;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: white;
